# TrainStationApi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  test_data.json
app/: asgi.py  settings.py  urls.py  wsgi.py
railroad/: apps.py  filters.py  image_path.py  models.py  serializers.py  urls.py  validators.py  views.py
railroad/migrations/: 0001_initial.py  0002_route_destination_route_distance_alter_route_source.py  0003_route_source_not_equal_destination_constraint.py  0004_remove_station_unique_latitude_longitude_and_more.py  0005_traintype_train.py  0006_crew.py  0007_order.py  0008_alter_order_created_at.py  0009_alter_order_created_at.py  0010_alter_order_created_at.py  0011_journey.py  0012_crew_journey.py  0013_alter_crew_journey_alter_journey_route_and_more.py  0014_alter_route_distance_ticket_unique_every_ticket.py  0015_remove_ticket_unique_every_ticket_and_more.py  0016_alter_ticket_options.py  0017_alter_ticket_unique_every_ticket.py  0018_crew_image_station_image_train_image.py  0019_remove_ticket_unique_every_ticket_and_more.py  0020_alter_ticket_unique_every_ticket.py  0021_remove_station_unique_all_stations_and_more.py  0022_alter_route_distance_station_unique_all_stations_and_more.py  0023_alter_train_cargo_num_alter_train_places_in_cargo.py  0024_alter_train_cargo_num_alter_train_places_in_cargo.py
user/: models.py  permissions.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username_and_more.py
(+1 files in other folders)
