[project]
name = "trainstationapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "django>=5.2.8",
    "django-debug-toolbar>=6.1.0",
    "django-filter>=25.2",
    "django-rest-framework>=0.1.0",
    "django-stubs>=5.2.7",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pillow>=12.0.0",
    "psycopg>=3.2.13",
]

[tool.black]
line-length = 60
target-version = ['py37']
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 60
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 4
use_parentheses = true
ensure_newline_before_comments = true
